--- a/starter/app/build.gradle
+++ b/starter/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     // Navigation
     implementation "android.arch.navigation:navigation-fragment-ktx:$version_navigation"
     implementation "android.arch.navigation:navigation-ui-ktx:$version_navigation"
+    implementation 'androidx.fragment:fragment-ktx:1.2.5'
+
 
     // Lifecycles
     implementation "androidx.lifecycle:lifecycle-extensions:$version_lifecycle"
